--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "NeoLink-Dev",
+  "name": "NeoLink",
   "options_page": "options.html",
   "background": {
     "page": "background.html"
