--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,6 +4,12 @@
   "background": {
     "page": "background.html"
   },
+  "content_scripts": [
+  {
+    "matches": ["*://*/*"],
+    "js": ["content.bundle.js"]
+  }
+],
   "browser_action": {
     "default_popup": "popup.html",
     "default_icon": "icon-34.png"
